modified posts image style and fixed bug in navbar on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,10 @@ pre > code {
   text-align: center;
 }
 
+.wrapper--posts {
+  margin-top: 0;
+}
+
 
 
 /***************************************************************
@@ -297,10 +301,10 @@ ol, ul {
 
   text-align: center;
   font-size: 1.75rem;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Raleway', Helvetica, sans-serif;
   font-weight: 700;
   letter-spacing: 2px;
-  line-height: 23px;
+  line-height: 25px;
 }
 
 .site-title:hover {
@@ -583,10 +587,12 @@ ol, ul {
  */
 @media screen and (max-width: 1024px) {
   /* GENERAL */
+  .header-wrapper {
+    width: 95%;
+  }
   .wrapper {
     width: 95%;
     padding: 0 20px 20px;
-    margin-top: 15px;
   }
   .pagination {
     margin-top: 20px;
